--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<!-- Required meta tags -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
 		<!-- Bootstrap CSS -->
 		<link
@@ -16,7 +18,6 @@
 		<title>Hello, world!</title>
 		<link rel="stylesheet" href="style.css" />
 		<!-- Go to www.addthis.com/dashboard to customize your tools -->
-		
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light nav-distance">
@@ -114,7 +115,7 @@
 				<img class="file-upload-image" id="face-image" src="#" alt="your image" />
 				<p class="result-message"></p>
 				<div id="label-container"></div>
-				
+
 				<!-- Go to www.addthis.com/dashboard to customize your tools -->
 				<div class="addthis_inline_share_toolbox"></div>
 
