--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			crossorigin="anonymous"
 		/>
 
-		<title>Hello, world!</title>
+		<title>My Animal Face</title>
 		<link rel="stylesheet" href="style.css" />
 		<!-- Go to www.addthis.com/dashboard to customize your tools -->
 	</head>
