--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 			</div>
 		</div>
 		<div id="webcam-container"></div>
-		<div id="disqus_thread"></div>
+		<div class="container" id="disqus_thread"></div>
 		<script>
 			/**
 			 *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
