--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
 			</div>
 		</div>
 		<div id="webcam-container"></div>
+		// Disqus comment section
 		<div class="container" id="disqus_thread"></div>
 		<script>
 			/**
