--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="webcam-container"></div>
+		<!-- Disqus comment section -->
 		<div class="container" id="disqus_thread"></div>
 		<script>
 			/**
